Fix alignment issues in view poll component

--- a/src/app/poll/view-poll/view-poll.component.scss
+++ b/src/app/poll/view-poll/view-poll.component.scss
@@ -56,3 +56,7 @@
 .value-container {
   width: 8.125rem;
 }
+
+.comments-card {
+  padding: 1.25rem !important;
+}
